kube/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  type: ClusterIP
  ports:
  - name: api
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: server
status:
  loadBalancer: {}
